--- a/css/custom.css
+++ b/css/custom.css
@@ -42,3 +42,8 @@ img {
 	text-align: center;
 	background: black
 }
+h1 { font-size: 3.5em; }
+h2 { font-size: 3em; }
+h3 { font-size: 1.17em; }
+h5 { font-size: .83em; }
+h6 { font-size: .75em; }
